[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
pandas = "^2.2.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
plotly = "^5.18.0"
torch = "^2.2.0"
transformers = "^4.37.2"
nltk = "^3.8.1"
dask = "^2024.1.1"
pyarrow = "^14.0.2"
polars = "^0.20.2"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"
celery = "^5.3.6"
redis = "^5.0.1"
dramatiq = "^1.15.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
albumentations = "^1.3.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
torch-geometric = "^2.4.0"
tensorflow = "^2.15.0"
keras = "^2.15.0"
pytorch-lightning = "^2.1.3"
spacy = "^3.7.2"
gensim = "^4.3.2"
fastapi-cache2 = "^0.2.1"
fastapi-limiter = "^0.1.6"
gunicorn = "^21.2.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.3.0"
faker = "^22.6.0"
locust = "^2.20.1"
pre-commit = "^3.6.0"
duckdb = "^0.9.2"
great-expectations = "^0.18.9"
mlflow = "^2.10.0"
optuna = "^3.5.0"
wandb = "^0.16.3"
strawberry-graphql = "^0.219.2"
graphene = "^3.3.0"
fastapi-users = "^12.1.2"
fastapi-pagination = "^0.12.14"
clickhouse-driver = "^0.2.6"
pymongo = "^4.6.1"
motor = "^3.3.2"
cassandra-driver = "^3.28.0"
python-memcached = "^1.62"
aiocache = "^0.12.2"
confluent-kafka = "^2.3.0"
aiokafka = "^0.10.0"
nats-py = "^2.6.0"
pulsar-client = "^3.4.0"
boto3 = "^1.34.34"
google-cloud-storage = "^2.13.0"
azure-storage-blob = "^12.19.0"
kubernetes = "^28.1.0"
docker = "^7.0.0"
terraform-local = "^0.20.0" 